--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,13 @@ name: Minimal Android CI Workflow
 on:
   push:
     branches:
-      - deploy
+      - main
 
 jobs:
   apk:
+    # prevent additional release
     if: ${{ github.event.head_commit.message }} != 'versionCode increased'
+
     name: Build & Deploy APK
     permissions: write-all
     runs-on: ubuntu-latest
